@@ -28,8 +28,6 @@ whichprecip = 3/
 ntem = 10.0
 nvel = 20.0
 niso = 10.0
-nout = 100.0e0, 5.0e3, 5.0e3
-nstr = 0.0e3
 thklim = 100.0d0
 mlimit = -200.0d0
 dew = 20.0d3 
